<resources>
    <string name="app_name">DailyNews</string>
    <string name="action_rate">Rate App</string>
    <string name="action_share">Share</string>
    <string name="action_close">Exit</string>
    <string name="dialog_OK">OK</string>
    <string name="error_msg">Internet is not available. Please check the connectivity</string>
    <string name="splash_screen_desc">News from different parts of world at one place</string>
    <string name="action_zoom">Refresh</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_check_updates">Update</string>
    <string name="action_rate_app">Rate this App</string>

    <!--Admob ad details-->
    <string name="admob_app_id">ca-app-pub-6264665505773691~8901151769</string>
    <string name="banner_home_footer">ca-app-pub-6264665505773691/1377884962</string>

    <!--Language Support-->
    <string name="english">ENGLISH</string>
    <string name="hindi">हिन्दी</string>
    <string name="tamil">தமிழ்</string>
    <string name="malayalam">മലയാളം</string>
    <string name="telugu">తెలుగు</string>
    <string name="kannada">ಕನ್ನಡ</string>

    <!--NewsCategory-->
    <string name="headlines">Top News</string>
    <string name="city">City</string>
    <string name="sports">Sports</string>
    <string name="world">World</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="business">Business</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>

    <!--Hindi News Paper-->
    <string name="amar_ujala_hi">अमर उजाला</string>
    <string name="dainik_jagran_hi">दैनिक जागरण</string>
    <string name="dainik_bhaskar_hi">दैनिक भास्कर</string>
    <string name="navbahrat_times_hi">नवभारत टाइम्स</string>
    <string name="hindustan_hi">हिंदुस्तान</string>
    <string name="rajastahn_patrika">राजस्थान पत्रिका</string>
    <string name="aajtak_hi">आज तक</string>
    <string name="ndtv_hi">NDTV इंडिया</string>
    <string name="abp_hi">एबीपी न्यूज़</string>
    <string name="zeenews_hi">ज़ी न्यूज़</string>

    <!--Hindi News URL-->
    <string name="amar_ujala_hi_url">"http://www.amarujala.com/"</string>
    <string name="dainik_jagran_hi_url">"http://www.jagran.com/"</string>
    <string name="dainik_bhaskar_hi_url">"http://m.bhaskar.com/"</string>
    <string name="navbahrat_times_hi_url">"http://m.navbharattimes.indiatimes.com/"</string>
    <string name="hindustan_hi_url">"http://m.livehindustan.com/"</string>
    <string name="rajastahn_patrika_url">"http://m.rajasthanpatrika.patrika.com/"</string>
    <string name="aajtak_hi_url">http://m.aajtak.in/</string>
    <string name="ndtv_hi_url">http://khabar.ndtv.com/</string>
    <string name="abp_hi_url">http://abpnews.abplive.in/</string>
    <string name="zeenews_hi_url">http://zeenews.india.com/</string>


    <!--English News Paper-->
    <string name="toi_en">TIMES OF INDIA</string>
    <string name="hindustan_en">HINDUSTAN TIMES</string>
    <string name="indian_express_en">THE INDIAN EXPRESS</string>
    <string name="first_post_en">FIRSTPOST</string>
    <string name="hindu_en">THE HINDU</string>
    <string name="economicTimes_en">THE ECONOMIC TIMES</string>
    <string name="timesnow_en">TIMES NOW</string>
    <string name="ndtv_en">NDTV 24X7</string>
    <string name="indiatoday_en">INDIA TODAY</string>
    <string name="ibncnn_en">CNN IBN</string>

    <!--English News Paper URL-->
    <string name="toi_en_url">http://m.timesofindia.com/</string>
    <string name="hindustan_en_url">http://m.hindustantimes.com/</string>
    <string name="indian_express_en_url">http://indianexpress.com/</string>
    <string name="first_post_en_url">http://m.firstpost.com/</string>
    <string name="hindu_en_url">http://m.thehindu.com/</string>
    <string name="economicTimes_en_url">http://m.economictimes.com/</string>
    <string name="timesnow_en_url">http://www.timesnow.tv/</string>
    <string name="ndtv_en_url">http://m.ndtv.com/</string>
    <string name="indiatoday_en_url">http://m.indiatoday.in/</string>
    <string name="ibncnn_en_url">http://www.news18.com/agency/cnn-news18.html</string>

    <!--Malyalam Newspaper-->
    <string name="manorama_mal">മലയാള മനോരമ</string>
    <string name="matrubhumi_mal">മാതൃഭൂമി</string>
    <string name="deshabhimani_mal">ദേശാഭിമാനി</string>
    <string name="madhyamam_mal">മാധ്യമം</string>
    <string name="keralaKaumudi_mal">കേരളകൗമുദി</string>
    <string name="mangalam_mal">മംഗളം</string>

    <!--Malyalam Newspaper_url-->
    <string name="manorama_mal_url">http://www.manoramaonline.com/</string>
    <string name="matrubhumi_mal_url">http://www.mathrubhumi.com/mobile/</string>
    <string name="deshabhimani_mal_url">http://www.deshabhimani.com/</string>
    <string name="madhyamam_mal_url">http://www.madhyamam.com/en/</string>
    <string name="keralaKaumudi_mal_url">http://news.keralakaumudi.com/beta/mobile/</string>
    <string name="mangalam_mal_url">http://www.mangalam.com/</string>

    <!--Kannada Newspaper-->
    <string name="kannadaprabha_kan">ಕನ್ನಡಪ್ರಭ</string>
    <string name="vijayakaranatka_kan">ವಿಜಯ ಕರ್ನಾಟಕ</string>
    <string name="vijayavani_kan">ವಿಜಯವಾಣಿ </string>
    <string name="prajavani_kan">ಪ್ರಜಾವಾಣಿ </string>
    <string name="udayavani_kan">ಉದಯವಾಣಿ </string>
    <string name="tv9kannada_kan">TV9 ಕರ್ನಾಟಕ </string>
    <string name="publictv_kan">ಪಬ್ಲಿಕ್ ಟಿವಿ</string>
    <string name="btvnews_kan">ಬಿ ಟವಿ  ನ್ಯೂಸ್</string>

    <!--Kannada Newspaper URL-->
    <string name="kannadaprabha_kan_url">http://www.kannadaprabha.com/</string>
    <string name="vijayakaranatka_kan_url">http://m.vijaykarnataka.com/</string>
    <string name="vijayavani_kan_url">http://epapervijayavani.in/</string>
    <string name="prajavani_kan_url">http://m.prajavani.net/</string>
    <string name="udayavani_kan_url">http://epaper.udayavani.com/</string>
    <string name="tv9kannada_kan_url">https://m.youtube.com/watch?v=P1Xnsz0YQQE</string>
    <string name="publictv_kan_url">http://publictv.in/</string>
    <string name="btvnews_kan_url">http://btvnewslive.com/</string>

    <!--Tamil News Paper-->
    <string name="paperkaran_tam">பேப்பர்காரன்</string>
    <string name="vivegam_tam">விவேகம் செய்தி</string>
    <string name="dinathanthi_tam">தினத்தந்தி</string>
    <string name="tamilhindu_tam">தி இந்து</string>
    <string name="dinakaran_tam">தினகரன்</string>
    <string name="dinamalar_tam">தினமலர்</string>
    <string name="dinamani_tam">தினமணி</string>
    <string name="dinaanchal_tam">தினஅஞ்சல்</string>

    <!--Tamil News URL-->
    <string name="paperkaran_tam_url">http://paperkaran.com/</string>
    <string name="vivegam_tam_url">http://www.vivegamnews.com/</string>
    <string name="dinathanthi_tam_url">http://m.dailythanthi.com/</string>
    <string name="tamilhindu_tam_url">http://m.tamil.thehindu.com/</string>
    <string name="dinakaran_tam_url">http://m.dinakaran.com/</string>
    <string name="dinamalar_tam_url">http://m.dinamalar.com/</string>
    <string name="dinamani_tam_url">http://www.dinamani.com/</string>
    <string name="dinaanchal_tam_url">http://www.dinaanchal.com/?m=1</string>

    <!--Telugu News Channel-->
    <string name="eenadu_telu">ఈనాడు</string>
    <string name="andhranews_telu">ఆంధ్ర భూమి</string>
    <string name="andhraJyothi_telu">ఆంధ్ర జ్యోతి</string>
    <string name="surayaa_telu">సూర్య </string>
    <string name="andrhaprabha_telu">ఆంధ్రప్రభ</string>
    <string name="sakshi_telu">సాక్షి</string>
    <string name="prajasakti_telu">ప్రజాశక్తి</string>

    <!--Telugu News channel url-->
    <string name="eenadu_telu_url">http://www.eenadu.net/</string>
    <string name="andhranews_telu_url">http://www.andhrabhoomi.net/</string>
    <string name="andhraJyothi_telu_url">http://www.andhrajyothy.com/</string>
    <string name="surayaa_telu_url">http://www.suryaa.com/</string>
    <string name="andrhaprabha_telu_url">http://prabhanews.com/</string>
    <string name="sakshi_telu_url">http://www.sakshi.com/</string>
    <string name="prajasakti_telu_url">http://www.prajasakti.com/</string>

    <!--Country Supported-->
    <string-array name="country_list">
        <item>India</item>
        <item>Bangladesh</item>
        <item>Srilanka</item>
        <item>Pakistan</item>
        <item>USA</item>
        <item>UK</item>
        <item>Nepal</item>
        <item>Argentina</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Mexico</item>
        <item>Peru</item>
        <item>Venezuela</item>

    </string-array>

    <!--<string name="about_app_desc">Daily News gets you the latest news updates in 6 different language ;Hindi,English,Tamil,Telugu,Malyalam,Kannada; without you having to go through all those lengthy newspapers and those loud and noisy news channels.
Just install Daily News and be the most updated with just a tap away.</string>-->

    <string name="about_app_desc">
    <![CDATA[
    <b><font color="#ebebeb">About</font color></b><br>
    DailyNews gets you the latest news updates in 6 different language.<br>
    <b>हिन्दी,English,தமிழ்,తెలుగు,മലയാളം,ಕನ್ನಡ</b><br>
    Without you having to go through all those lengthy newspapers and those loud and noisy news channels.<br>
    Just install DailyNews and be the most updated with just a tap away.<br><br>
    <b><font color="#ebebeb">Version:</b></font color>1.0.1<br>
    ]]>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
