<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_zoom"
        android:icon="@drawable/ic_zoom_in_white_24dp"
        app:showAsAction="always"
        android:title="@string/action_zoom" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_refresh" />
    <!-- About the app -->
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about" />

    <!-- Check updates -->
    <item
        android:id="@+id/action_check_updates"
        android:showAsAction="never"
        android:title="@string/action_check_updates" />

</menu>