<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalsh_screen_wall"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/toiBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".50"
            android:background="@color/bg_screen4_translucent">

            <ImageView
                android:id="@+id/toi"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/toi_icon" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toi"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:text="@string/toi_en"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFF"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/hinduBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".50"
            android:background="@color/dot_dark_screen1_translucent">

            <ImageView
                android:id="@+id/theHindu"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/hindu_icon" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/theHindu"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:text="@string/hindu_en"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFF"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/indianExpress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".50"
            android:background="#75FF9800">

            <ImageView
                android:id="@+id/indianexpress"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/indian_express_icon" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/indianexpress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:text="@string/indian_express_en"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFF"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/firstPost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".50"
            android:background="#75009688">

            <ImageView
                android:id="@+id/firstpost"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/firstpost_icon" />

            <TextView
                android:id="@+id/textView222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstpost"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:text="@string/first_post_en"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFF"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".50"
            android:background="#75F44336">

            <ImageView
                android:id="@+id/hindustanTimes"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/hindustan_times_icon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hindustanTimes"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:text="@string/hindustan_en"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFF"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight=".50"
            android:background="#75795548">

            <ImageView
                android:id="@+id/thEconomicTimes"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/ecnomic_times_icon" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thEconomicTimes"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:text="@string/economicTimes_en"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFF"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
