<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalsh_screen_wall"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <RelativeLayout
            android:id="@+id/toiBtn"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_margin="4dp"
            android:layout_height="match_parent"
            android:background="@color/bg_screen4_translucent">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/iManorama"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/manorma_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/manorama_mal"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:id="@+id/tes"
                android:layout_below="@+id/iManorama"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/hinduBtn"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@color/dot_dark_screen1_translucent">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/iMatrubhumi"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/mathrubhumi_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/matrubhumi_mal"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:id="@+id/textView4"
                android:layout_below="@+id/iMatrubhumi"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp" />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <RelativeLayout
            android:id="@+id/indianExpress"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="#75FF9800">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/iDeshabhimani"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/deshabhimani_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/deshabhimani_mal"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:id="@+id/textView5"
                android:layout_below="@+id/iDeshabhimani"
                android:layout_marginTop="29dp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/firstPost"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:background="#75009688">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/iMadhyamam"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/madhaym_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/madhyamam_mal"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:id="@+id/textView222"
                android:layout_marginTop="29dp"
                android:layout_below="@+id/iMadhyamam"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_margin="4dp"
            android:layout_height="match_parent"
            android:background="#75F44336">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/iKerlakaumudi"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/keralakamudi_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/keralaKaumudi_mal"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:id="@+id/textView"
                android:layout_marginTop="29dp"
                android:layout_below="@+id/iKerlakaumudi"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="#75795548">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/iMangalam"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/mangalam_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mangalam_mal"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:layout_marginTop="29dp"
                android:id="@+id/textView2"
                android:layout_below="@+id/iMangalam"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
